--- a/templates/download.html
+++ b/templates/download.html
@@ -38,7 +38,7 @@
 					Explain how to use it
 				</p>
 
-				<a href="{{ url_for('download')}}?d4_client={{d4_client}}&type={{d4_type}}&destination={{destination}}{%if os_client%}&os={{os_client}}&arch={{arch}}{%endif%}" class="btn btn-primary">
+				<a href="{{ url_for('download')}}?d4_client={{d4_client}}&type={{d4_type}}&destination={{destination}}{%if mail%}&mail={{mail}}{%endif%}{%if os_client%}&os={{os_client}}&arch={{arch}}{%endif%}" class="btn btn-primary">
 					<img src="{{ url_for('static', filename='img/d4-logo.png')}}" alt="Download client" style="width:40px;">
 					Download D4-Client
 				</a>
