add: [readme] Explantions + pictures

--- a/templates/d4-mail.html
+++ b/templates/d4-mail.html
@@ -153,7 +153,7 @@ transition: all 0.25s ease-out;
 			<div class="col-lg-6 col-md-10">
 
 				<p>
-					TODO: explain why
+<!--					TODO: explain why-->
 				</p>
 
 				<form class="form-signin" action="{{ url_for('mail')}}" method="post">
