--- a/templates/d4-mail.html
+++ b/templates/d4-mail.html
@@ -103,12 +103,12 @@ transition: all 0.25s ease-out;
 <body>
 
 	<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-		<a class="navbar-brand" href="{{ url_for('index') }}">
+		<a class="navbar-brand" href="{{ url_for('root.index') }}">
       <img src="{{ url_for('static', filename='img/d4-logo.png')}}" alt="D4 Project" style="width:80px;">
     </a>
 	  <ul class="navbar-nav">
 	    <li class="nav-item active">
-	      <a class="nav-link mr-3" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
+	      <a class="nav-link mr-3" href="{{ url_for('root.index') }}">Home <span class="sr-only">(current)</span></a>
 	    </li>
 	  </ul>
 	</nav>
@@ -156,7 +156,7 @@ transition: all 0.25s ease-out;
 <!--					TODO: explain why-->
 				</p>
 
-				<form class="form-signin" action="{{ url_for('mail')}}" method="post">
+				<form class="form-signin" action="{{ url_for('root.mail')}}" method="post">
 					<input type="text" name="d4_client" class="form-control" value="{{d4_client}}" hidden>
 					<input type="text" name="type" class="form-control" value="{{d4_type}}" hidden>
 					<input type="text" name="os" class="form-control" value="{{os_client}}" hidden>
@@ -176,14 +176,14 @@ transition: all 0.25s ease-out;
 					<br>
 
 					<div class="custom-control custom-switch mt-6">
-					  <input type="checkbox" class="custom-control-input" name="third_party" id="third_party" {%if third_party%}checked value="True"{%else%}value=""{%endif%} onclick="window.location.href ='{{ url_for('mail')}}?d4_client={{d4_client}}&type={{d4_type}}&destination={{destination}}{%if os_client%}&os={{os_client}}&arch={{arch}}{%endif%}&third_party='+$('#third_party').val();">
+					  <input type="checkbox" class="custom-control-input" name="third_party" id="third_party" {%if third_party%}checked value="True"{%else%}value=""{%endif%} onclick="window.location.href ='{{ url_for('root.mail')}}?d4_client={{d4_client}}&type={{d4_type}}&destination={{destination}}{%if os_client%}&os={{os_client}}&arch={{arch}}{%endif%}&third_party='+$('#third_party').val();">
 					  <label class="custom-control-label" for="third_party">I want to share with third party</label>
 					</div>
 				</form>
 
 				<br>
 
-				<a class="btn btn-outline-secondary" href="{{ url_for('download_page')}}?d4_client={{d4_client}}&type={{d4_type}}&destination={{destination}}{%if os_client%}&os={{os_client}}&arch={{arch}}{%endif%}&third_party={{third_party}}">
+				<a class="btn btn-outline-secondary" href="{{ url_for('root.download_page')}}?d4_client={{d4_client}}&type={{d4_type}}&destination={{destination}}{%if os_client%}&os={{os_client}}&arch={{arch}}{%endif%}&third_party={{third_party}}">
 					I don't want to provide a Mail</a>
 
 			</div>
