--- a/templates/download.html
+++ b/templates/download.html
@@ -17,12 +17,12 @@
 <body>
 
 	<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-		<a class="navbar-brand" href="{{ url_for('index') }}">
+		<a class="navbar-brand" href="{{ url_for('root.index') }}">
       <img src="{{ url_for('static', filename='img/d4-logo.png')}}" alt="D4 Project" style="width:80px;">
     </a>
 	  <ul class="navbar-nav">
 	    <li class="nav-item active">
-	      <a class="nav-link mr-3" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
+	      <a class="nav-link mr-3" href="{{ url_for('root.index') }}">Home <span class="sr-only">(current)</span></a>
 	    </li>
 	  </ul>
 	</nav>
@@ -39,7 +39,7 @@
 					Press the "Download D4-Client" below to download the corresponding zip archive:
 				</p>
 
-				<a href="{{ url_for('download')}}?d4_client={{d4_client}}&type={{d4_type}}&destination={{destination}}{%if mail%}&mail={{mail}}{%endif%}{%if os_client%}&os={{os_client}}&arch={{arch}}{%endif%}&third_party={{third_party}}" class="btn btn-primary">
+				<a href="{{ url_for('root.download')}}?d4_client={{d4_client}}&type={{d4_type}}&destination={{destination}}{%if mail%}&mail={{mail}}{%endif%}{%if os_client%}&os={{os_client}}&arch={{arch}}{%endif%}&third_party={{third_party}}" class="btn btn-primary">
 					<img src="{{ url_for('static', filename='img/d4-logo.png')}}" alt="Download client" style="width:40px;">
 					Download D4-Client
 				</a>
