--- a/templates/index.html
+++ b/templates/index.html
@@ -17,12 +17,12 @@
 <body>
 
 	<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-		<a class="navbar-brand" href="{{ url_for('index') }}">
+		<a class="navbar-brand" href="{{ url_for('root.index') }}">
       <img src="{{ url_for('static', filename='img/d4-logo.png')}}" alt="D4 Project" style="width:80px;">
     </a>
 	  <ul class="navbar-nav">
 	    <li class="nav-item active">
-	      <a class="nav-link mr-3" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
+	      <a class="nav-link mr-3" href="{{ url_for('root.index') }}">Home <span class="sr-only">(current)</span></a>
 	    </li>
 	  </ul>
 	</nav>
@@ -77,7 +77,7 @@
 				</p>
 
 				<div class="text-center">
-					<a href="{{ url_for('client') }}" class="btn btn-primary btn-lg">
+					<a href="{{ url_for('root.client') }}" class="btn btn-primary btn-lg">
 						Register And Download A Sensor
 					</a>
 				</div>
