--- a/templates/d4-mail.html
+++ b/templates/d4-mail.html
@@ -183,7 +183,7 @@ transition: all 0.25s ease-out;
 
 				<br>
 
-				<a class="btn btn-outline-secondary" href="{{ url_for('root.download_page')}}?d4_client={{d4_client}}&type={{d4_type}}&destination={{destination}}{%if os_client%}&os={{os_client}}&arch={{arch}}{%endif%}&third_party={{third_party}}">
+				<a class="btn btn-outline-secondary" href="{{ url_for('root.download_page')}}?d4_client={{d4_client}}&type={{d4_type}}&destination={{destination}}{%if os_client%}&os_client={{os_client}}&arch={{arch}}{%endif%}&third_party={{third_party}}">
 					I don't want to provide a Mail</a>
 
 			</div>
